--- a/lang/ar-min.json
+++ b/lang/ar-min.json
@@ -624,6 +624,14 @@
     "main_v2_newsletter_email_placeholder": "أدخل عنوان بريدك الإلكتروني",
     "main_v2_newsletter_subscribe": "اشترك",
     "main_v2_newsletter_privacy": "نحن نحترم خصوصيتك. يمكنك إلغاء الاشتراك في أي وقت.",
+    "main_v2_feature_5_title": "⚙️ التنفيذ المتوازي",
+    "main_v2_feature_5_desc": "قدرات معالجة متوازية متقدمة للتعامل مع مهام متعددة في نفس الوقت.",
+    "main_v2_feature_6_title": "🏗️ الهندسة الطبقية",
+    "main_v2_feature_6_desc": "تصميم طبقي معياري لتنظيم أفضل وقابلية صيانة محسنة.",
+    "main_v2_feature_7_title": "🎨 واجهة محسنة",
+    "main_v2_feature_7_desc": "مكونات واجهة مستخدم جميلة ومتجاوبة لتطبيقات الويب الحديثة.",
+    "main_v2_feature_8_title": "🚀 SEO متفوق",
+    "main_v2_feature_8_desc": "أدوات تحسين SEO متقدمة لرؤية أفضل في محركات البحث.",
     "main_v2_contact_desc": "تواصل مع فريقنا للحصول على الدعم أو الشراكات أو أي أسئلة حول CIN Framework.",
     "main_v2_parallel_execution_title": "التنفيذ المتوازي",
     "main_v2_parallel_execution_desc": "تنفيذ مهام متعددة في نفس الوقت مع قدرات معالجة متوازية متقدمة للحصول على أقصى أداء.",
