--- a/lang/en-min.json
+++ b/lang/en-min.json
@@ -624,6 +624,14 @@
     "main_v2_newsletter_email_placeholder": "Enter your email address",
     "main_v2_newsletter_subscribe": "Subscribe",
     "main_v2_newsletter_privacy": "We respect your privacy. Unsubscribe at any time.",
+    "main_v2_feature_5_title": "⚙️ Parallel Execution",
+    "main_v2_feature_5_desc": "Advanced parallel processing capabilities for handling multiple tasks simultaneously.",
+    "main_v2_feature_6_title": "🏗️ Layered Architecture",
+    "main_v2_feature_6_desc": "Modular layered design for better organization and maintainability.",
+    "main_v2_feature_7_title": "🎨 Enhanced UI",
+    "main_v2_feature_7_desc": "Beautiful and responsive user interface components for modern web applications.",
+    "main_v2_feature_8_title": "🚀 Superior SEO",
+    "main_v2_feature_8_desc": "Advanced SEO optimization tools for better search engine visibility.",
     "main_v2_contact_desc": "Get in touch with our team for support, partnerships, or any questions about CIN Framework.",
     "main_v2_parallel_execution_title": "Parallel Execution",
     "main_v2_parallel_execution_desc": "Execute multiple tasks simultaneously with advanced parallel processing capabilities for maximum performance.",
