--- a/lang/ar-min.json
+++ b/lang/ar-min.json
@@ -1,5 +1,5 @@
 {
-  "v": "2.1.5",
+  "v": "2.1.8",
   "ar": {
     "main": "الرئيسية",
     "about_cin": "عن CIN",
@@ -640,6 +640,7 @@
     "main_v2_enhanced_ui_title": "واجهة محسنة",
     "main_v2_enhanced_ui_desc": "مكونات واجهة مستخدم حديثة ومتجاوبة مع تجربة مستخدم فائقة وإمكانية وصول.",
     "main_v2_superior_seo_title": "SEO متفوق",
-    "main_v2_superior_seo_desc": "أدوات وميزات تحسين محركات البحث المدمجة لضمان ترتيب تطبيقاتك أعلى في نتائج البحث."
+    "main_v2_superior_seo_desc": "أدوات وميزات تحسين محركات البحث المدمجة لضمان ترتيب تطبيقاتك أعلى في نتائج البحث.",
+    "read_more": "اقرأ المزيد"
   }
 }
