--- a/lang/ar-min.json
+++ b/lang/ar-min.json
@@ -1,5 +1,5 @@
 {
-  "v": "2.1.8",
+  "v": "2.1.3",
   "ar": {
     "main": "الرئيسية",
     "about_cin": "عن CIN",
@@ -185,56 +185,6 @@
     "reporting_guidelines": "إرشادات الإبلاغ",
     "cin_cli": "CIN CLI",
     "cin_cli_tool": "أداة CIN-CLI",
-    "main_v2_hero_badge": "🚀 إطار عمل CIN - ويب 4",
-    "main_v2_title": "إطار عمل CIN",
-    "main_v2_subtitle": "ويب 4 – مدعوم بالاكتفاء الذاتي المحلي والأمن الهجومي",
-    "main_v2_description": "إطار عمل PHP متقدم مصمم لتبسيط إنشاء أنظمة ومواقع ويب عالية الأداء وديناميكية. يركز إطار عمل CIN على الاكتفاء الذاتي المحلي والأمن الهجومي ومرونة المطور الكاملة.",
-    "main_v2_features_title": "الميزات الأساسية",
-    "main_v2_feature_1_title": "🔥 أداء فائق",
-    "main_v2_feature_1_desc": "سرعة تنفيذ محسنة ومعالجة متوازية لأقصى كفاءة.",
-    "main_v2_feature_2_title": "🛡️ أمن هجومي",
-    "main_v2_feature_2_desc": "إجراءات أمنية متقدمة تهاجم الثغرات قبل أن يتم استغلالها.",
-    "main_v2_feature_3_title": "🧠 دعم بيئات متعددة",
-    "main_v2_feature_3_desc": "تكيف سلس مع أي بيئة خادم مع توافق كامل.",
-    "main_v2_feature_4_title": "⚡ اكتفاء ذاتي محلي",
-    "main_v2_feature_4_desc": "استقلالية كاملة عن التبعيات الخارجية لأقصى تحكم.",
-    "main_v2_repositories_title": "المستودعات الرسمية",
-    "main_v2_repo_cli_title": "CIN CLI",
-    "main_v2_repo_cli_desc": "واجهة سطر الأوامر لإدارة الإطار وإنشاء المشاريع.",
-    "main_v2_repo_framework_title": "إطار عمل CIN",
-    "main_v2_repo_framework_desc": "الإطار الأساسي مع جميع المكونات والمكتبات الأساسية.",
-    "main_v2_repo_library_title": "مكتبة CIN",
-    "main_v2_repo_library_desc": "مجموعة من المكتبات الجاهزة للاستخدام للتطوير السريع.",
-    "main_v2_metrics_title": "مقاييس الإطار",
-    "main_v2_stars": "النجوم",
-    "main_v2_followers": "المتابعون",
-    "main_v2_commits": "الالتزامات",
-    "main_v2_issues": "المشاكل",
-    "main_v2_downloads": "التحميلات",
-    "main_v2_performance": "الأداء",
-    "main_v2_uptime": "وقت التشغيل",
-    "main_v2_response_time": "وقت الاستجابة",
-    "main_v2_security_title": "الأمن والجودة",
-    "main_v2_security_policy": "سياسة الأمان",
-    "main_v2_code_quality": "جودة الكود",
-    "main_v2_vulnerability_scan": "فحص الثغرات",
-    "main_v2_iso_certified": "معتمد ISO",
-    "main_v2_owasp_compliant": "متوافق مع OWASP",
-    "main_v2_psr_standards": "معايير PSR",
-    "main_v2_testing_coverage": "تغطية الاختبار",
-    "main_v2_cta_title": "ابدأ اليوم",
-    "main_v2_cta_desc": "انضم إلى آلاف المطورين الذين يبنون المستقبل مع إطار عمل CIN.",
-    "main_v2_download_cli": "تحميل CLI",
-    "main_v2_view_docs": "عرض الوثائق",
-    "main_v2_join_community": "انضم للمجتمع",
-    "main_v2_contact_title": "معلومات الاتصال",
-    "main_v2_support_email": "الدعم",
-    "main_v2_contact_email": "الاتصال",
-    "main_v2_admin_email": "الإدارة",
-    "main_v2_dev_email": "التطوير",
-    "main_v2_mawi_email": "ماوي مان",
-    "main_v2_copyright": "© 2025 إطار عمل CIN. جميع الحقوق محفوظة لأيوب العرجاني (ماوي مان).",
-    "main_v2_license": "رخصة ملكية - جميع الحقوق محفوظة",
     "available_commands": "الأوامر المتاحة",
     "cin_cli_subtitle": "أداة شاملة لسطر الأوامر مصممة خصيصاً لإدارة إطار عمل CIN بسهولة وسرعة.",
     "core_capabilities": "القدرات الأساسية",
@@ -618,29 +568,6 @@
     "cin_framework_1_sidebar_title": "إطار عمل CIN",
     "cin_framework_1_sidebar_framework": "إطار عمل CIN",
     "cin_framework_1_sidebar_getting_started": "البدء",
-    "cin_framework_1_sidebar_release_notes": "ملاحظات الإصدار",
-    "main_v2_newsletter_title": "ابق على اطلاع",
-    "main_v2_newsletter_desc": "اشترك في نشرتنا الإخبارية وكن أول من يعرف عن تحديثات CIN Framework والميزات الجديدة والإصدارات.",
-    "main_v2_newsletter_email_placeholder": "أدخل عنوان بريدك الإلكتروني",
-    "main_v2_newsletter_subscribe": "اشترك",
-    "main_v2_newsletter_privacy": "نحن نحترم خصوصيتك. يمكنك إلغاء الاشتراك في أي وقت.",
-    "main_v2_feature_5_title": "⚙️ التنفيذ المتوازي",
-    "main_v2_feature_5_desc": "قدرات معالجة متوازية متقدمة للتعامل مع مهام متعددة في نفس الوقت.",
-    "main_v2_feature_6_title": "🏗️ الهندسة الطبقية",
-    "main_v2_feature_6_desc": "تصميم طبقي معياري لتنظيم أفضل وقابلية صيانة محسنة.",
-    "main_v2_feature_7_title": "🎨 واجهة محسنة",
-    "main_v2_feature_7_desc": "مكونات واجهة مستخدم جميلة ومتجاوبة لتطبيقات الويب الحديثة.",
-    "main_v2_feature_8_title": "🚀 SEO متفوق",
-    "main_v2_feature_8_desc": "أدوات تحسين SEO متقدمة لرؤية أفضل في محركات البحث.",
-    "main_v2_contact_desc": "تواصل مع فريقنا للحصول على الدعم أو الشراكات أو أي أسئلة حول CIN Framework.",
-    "main_v2_parallel_execution_title": "التنفيذ المتوازي",
-    "main_v2_parallel_execution_desc": "تنفيذ مهام متعددة في نفس الوقت مع قدرات معالجة متوازية متقدمة للحصول على أقصى أداء.",
-    "main_v2_layered_architecture_title": "الهيكل الطبقي",
-    "main_v2_layered_architecture_desc": "هيكل نظيف ومعياري مع طبقات محددة بوضوح لسهولة الصيانة وقابلية التوسع.",
-    "main_v2_enhanced_ui_title": "واجهة محسنة",
-    "main_v2_enhanced_ui_desc": "مكونات واجهة مستخدم حديثة ومتجاوبة مع تجربة مستخدم فائقة وإمكانية وصول.",
-    "main_v2_superior_seo_title": "SEO متفوق",
-    "main_v2_superior_seo_desc": "أدوات وميزات تحسين محركات البحث المدمجة لضمان ترتيب تطبيقاتك أعلى في نتائج البحث.",
-    "read_more": "اقرأ المزيد"
+    "cin_framework_1_sidebar_release_notes": "ملاحظات الإصدار"
   }
 }
