--- a/lang/en-min.json
+++ b/lang/en-min.json
@@ -1,5 +1,5 @@
 {
-  "v": "2.1.8",
+  "v": "2.1.3",
   "en": {
     "main": "MAIN",
     "about_cin": "About CIN",
@@ -185,56 +185,6 @@
     "reporting_guidelines": "Reporting Guidelines",
     "cin_cli": "CIN CLI",
     "cin_cli_tool": "CIN-CLI Tool",
-    "main_v2_hero_badge": "🚀 CIN FRAMEWORK - WEB 4",
-    "main_v2_title": "CIN FRAMEWORK",
-    "main_v2_subtitle": "WEB 4 – POWERED BY LOCAL SELF-SUFFICIENCY AND AGGRESSIVE SECURITY",
-    "main_v2_description": "An advanced PHP framework designed to simplify the creation of high-performance, dynamic systems and websites. CIN Framework focuses on local self-sufficiency, aggressive security, and full developer flexibility.",
-    "main_v2_features_title": "Core Features",
-    "main_v2_feature_1_title": "🔥 Superior Performance",
-    "main_v2_feature_1_desc": "Optimized execution speed and parallel processing for maximum efficiency.",
-    "main_v2_feature_2_title": "🛡️ Aggressive Security",
-    "main_v2_feature_2_desc": "Advanced security measures that attack vulnerabilities before they can be exploited.",
-    "main_v2_feature_3_title": "🧠 Multi-Environment Support",
-    "main_v2_feature_3_desc": "Seamless adaptation to any server environment with full compatibility.",
-    "main_v2_feature_4_title": "⚡ Local Self-Sufficiency",
-    "main_v2_feature_4_desc": "Complete independence from external dependencies for maximum control.",
-    "main_v2_repositories_title": "Official Repositories",
-    "main_v2_repo_cli_title": "CIN CLI",
-    "main_v2_repo_cli_desc": "Command-line interface for framework management and project creation.",
-    "main_v2_repo_framework_title": "CIN Framework",
-    "main_v2_repo_framework_desc": "Core framework with all essential components and libraries.",
-    "main_v2_repo_library_title": "CIN Library",
-    "main_v2_repo_library_desc": "Collection of ready-to-use libraries for rapid development.",
-    "main_v2_metrics_title": "Framework Metrics",
-    "main_v2_stars": "Stars",
-    "main_v2_followers": "Followers",
-    "main_v2_commits": "Commits",
-    "main_v2_issues": "Issues",
-    "main_v2_downloads": "Downloads",
-    "main_v2_performance": "Performance",
-    "main_v2_uptime": "Uptime",
-    "main_v2_response_time": "Response Time",
-    "main_v2_security_title": "Security & Quality",
-    "main_v2_security_policy": "Security Policy",
-    "main_v2_code_quality": "Code Quality",
-    "main_v2_vulnerability_scan": "Vulnerability Scan",
-    "main_v2_iso_certified": "ISO Certified",
-    "main_v2_owasp_compliant": "OWASP Compliant",
-    "main_v2_psr_standards": "PSR Standards",
-    "main_v2_testing_coverage": "Testing Coverage",
-    "main_v2_cta_title": "Get Started Today",
-    "main_v2_cta_desc": "Join thousands of developers building the future with CIN Framework.",
-    "main_v2_download_cli": "Download CLI",
-    "main_v2_view_docs": "View Documentation",
-    "main_v2_join_community": "Join Community",
-    "main_v2_contact_title": "Contact Information",
-    "main_v2_support_email": "Support",
-    "main_v2_contact_email": "Contact",
-    "main_v2_admin_email": "Admin",
-    "main_v2_dev_email": "Development",
-    "main_v2_mawi_email": "Mawi Man",
-    "main_v2_copyright": "© 2025 CIN FRAMEWORK. All rights reserved to Ayoub Alarjani (Mawi Man).",
-    "main_v2_license": "Proprietary License - All rights reserved",
     "available_commands": "Available Commands",
     "cin_cli_subtitle": "A comprehensive command-line tool specifically designed to manage the CIN Framework with ease and speed.",
     "core_capabilities": "Core Capabilities",
@@ -618,29 +568,6 @@
     "cin_framework_1_sidebar_title": "CIN FRAMEWORK",
     "cin_framework_1_sidebar_framework": "CIN Framework",
     "cin_framework_1_sidebar_getting_started": "Getting Started",
-    "cin_framework_1_sidebar_release_notes": "Release Notes",
-    "main_v2_newsletter_title": "Stay Updated",
-    "main_v2_newsletter_desc": "Subscribe to our newsletter and be the first to know about CIN Framework updates, new features, and releases.",
-    "main_v2_newsletter_email_placeholder": "Enter your email address",
-    "main_v2_newsletter_subscribe": "Subscribe",
-    "main_v2_newsletter_privacy": "We respect your privacy. Unsubscribe at any time.",
-    "main_v2_feature_5_title": "⚙️ Parallel Execution",
-    "main_v2_feature_5_desc": "Advanced parallel processing capabilities for handling multiple tasks simultaneously.",
-    "main_v2_feature_6_title": "🏗️ Layered Architecture",
-    "main_v2_feature_6_desc": "Modular layered design for better organization and maintainability.",
-    "main_v2_feature_7_title": "🎨 Enhanced UI",
-    "main_v2_feature_7_desc": "Beautiful and responsive user interface components for modern web applications.",
-    "main_v2_feature_8_title": "🚀 Superior SEO",
-    "main_v2_feature_8_desc": "Advanced SEO optimization tools for better search engine visibility.",
-    "main_v2_contact_desc": "Get in touch with our team for support, partnerships, or any questions about CIN Framework.",
-    "main_v2_parallel_execution_title": "Parallel Execution",
-    "main_v2_parallel_execution_desc": "Execute multiple tasks simultaneously with advanced parallel processing capabilities for maximum performance.",
-    "main_v2_layered_architecture_title": "Layered Architecture",
-    "main_v2_layered_architecture_desc": "Clean, modular architecture with well-defined layers for better maintainability and scalability.",
-    "main_v2_enhanced_ui_title": "Enhanced UI",
-    "main_v2_enhanced_ui_desc": "Modern, responsive user interface components with superior user experience and accessibility.",
-    "main_v2_superior_seo_title": "Superior SEO",
-    "main_v2_superior_seo_desc": "Built-in SEO optimization tools and features to ensure your applications rank higher in search results.",
-    "read_more": "Read More"
+    "cin_framework_1_sidebar_release_notes": "Release Notes"
   }
 }
